Added index in html/

--- a/html/index.html
+++ b/html/index.html
@@ -76,7 +76,7 @@
 
 <div class="background">
     <div class="container text-center">
-        <p> My name is Narayan Manivannan, and I am a Sophomore studying Computer Science at the University of Michigan College of Engineering.  I am currently taking courses such as Introduction to Operating Systems and Introduction to Computer Security, and I have taken past courses such as Data Structures and Algorithms, Introduction to Computer Organization, and Discrete Mathematics.  As I progress through such courses, I find myself enjoying Computer Science even more, so I am looking forward to continue learning as much as possible in my upcoming years. </p>
+        <p> My name is Narayan Manivannan, and I am a Junior studying Computer Science at the University of Michigan College of Engineering.  I am currently taking courses such as Introduction to Operating Systems and Introduction to Computer Security, and I have taken past courses such as Data Structures and Algorithms, Introduction to Computer Organization, and Discrete Mathematics.  As I progress through such courses, I find myself enjoying Computer Science even more, so I am looking forward to continue learning as much as possible in my upcoming years. </p>
 
         <p> This past summer, I researched for the University of Michigan Aerospace Engineering Department - coding functionalities for an autonomous drone, and I am currently on a design team “MiOT” that specializes in Internet of Things and Wearables.  I also have previous internship experience, and I have completed several side projects by myself and with others.  Through these experiences, I have developed my technical and collaborative skills that are necessary for any workplace. </p>     
 
