--- a/about.html
+++ b/about.html
@@ -1,5 +1,3 @@
-<!-- BLOG PAGE -->
-
 <!-- ABOUT PAGE -->
 <!-- Includes Goals, Hobbies, Background, Family-->
 <!-- COVER PAGE -->
@@ -12,13 +10,13 @@
     <!-- mobile -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- CSS -->
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="/css/home.css">
     <!-- Include Jquery and BS -->
     <!-- BS -->
-    <link rel="stylesheet" href="../css/bs/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bs/bootstrap.min.css">
     <!-- Jquery Scripts -->
-    <script src="../js/jquery/jquery-3.2.1.min.js"></script>
-    <script src="../css/bs/bootstrap.min.js"></script>
+    <script src="/js/jquery/jquery-3.2.1.min.js"></script>
+    <script src="/css/bs/bootstrap.min.js"></script>
     <style>
         /* Remove the navbar's default margin-bottom and rounded borders */ 
         .navbar {
@@ -55,8 +53,8 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li><a href="home.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li class="active"><a href="blog.html">Blog</a></li>
+        <li class="active"><a href="about.html">About</a></li>
+        <li><a href="blog.html">Blog</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
