--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,4 @@
-<!-- CONTACT PAGE -->
-<!-- emails, phone number , github, linkedin, email form to me-->
+<!-- BLOG PAGE -->
 
 <!-- ABOUT PAGE -->
 <!-- Includes Goals, Hobbies, Background, Family-->
@@ -13,13 +12,13 @@
     <!-- mobile -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- CSS -->
-    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="css/home.css">
     <!-- Include Jquery and BS -->
     <!-- BS -->
-    <link rel="stylesheet" href="../css/bs/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bs/bootstrap.min.css">
     <!-- Jquery Scripts -->
-    <script src="../js/jquery/jquery-3.2.1.min.js"></script>
-    <script src="../css/bs/bootstrap.min.js"></script>
+    <script src="/js/jquery/jquery-3.2.1.min.js"></script>
+    <script src="/css/bs/bootstrap.min.js"></script>
     <style>
         /* Remove the navbar's default margin-bottom and rounded borders */ 
         .navbar {
@@ -29,7 +28,7 @@
         
         /* Add a gray background color and some padding to the footer */
         footer {
-          background-color: black;
+         background-color: black;
           color: white;
           font-style: italic;
           font-family: serif;
@@ -57,48 +56,58 @@
       <ul class="nav navbar-nav">
         <li><a href="home.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="blog.html">Blog</a></li>
+        <li class="active"><a href="blog.html">Blog</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
 
-<div class="container-fluid bg-3 text-center">  
-    <br><br><br><br><br><br> 
-    <h2>Login</h2><br>
+<div class="container-fluid bg-3 text-center">    
+  <h3>Some of my Work</h3><br>
+  <div class="row">
+    <div class="col-sm-3">
+      <p>Some text..</p>
+      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+    </div>
+    <div class="col-sm-3"> 
+      <p>Some text..</p>
+      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+    </div>
+    <div class="col-sm-3"> 
+      <p>Some text..</p>
+      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+    </div>
+    <div class="col-sm-3">
+      <p>Some text..</p>
+      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+    </div>
+  </div>
+</div><br>
 
-        <form class="form-horizontal" action="/action_page.php">
-            <div class="form-group">
-                <label class="control-label col-sm-4" for="email">Email:</label>
-                <div class="col-sm-4">
-                    <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="control-label col-sm-4" for="pwd">Password:</label>
-                <div class="col-sm-4">          
-                    <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pwd">
-                </div>
-            </div>
-            <div class="form-group">        
-                <div class="col-sm-offset-2 col-sm-8">
-                    <div class="checkbox">
-                    <label><input type="checkbox" name="remember"> Remember me</label>
-                    </div>
-                </div>
-            </div>
-        <div class="form-group">        
-          <div class="col-sm-offset-2 col-sm-8">
-            <button type="submit" class="btn btn-default">Submit</button>
-          </div>
+<div class="container-fluid bg-3 text-center">    
+    <div class="row">
+        <div class="col-sm-3">
+            <p>Some text..</p>
+            <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
         </div>
-      </form>
-
+        <div class="col-sm-3"> 
+            <p>Some text..</p>
+            <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+        </div>
+        <div class="col-sm-3"> 
+            <p>Some text..</p>
+            <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+        </div>
+        <div class="col-sm-3">
+            <p>Some text..</p>
+            <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+        </div>
+    </div>
 </div><br><br>
   
 
