--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- mobile -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- CSS -->
-    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="css/home.css">
     <!-- Include Jquery and BS -->
     <!-- BS -->
     <link rel="stylesheet" href="/css/bs/bootstrap.min.css">
