Redid index page

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="css/home.css">
     <!-- Include Jquery and BS -->
     <!-- BS -->
-    <link rel="stylesheet" href="/css/bs/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bs/bootstrap.min.css">
     <!-- Jquery Scripts -->
-    <script src="/js/jquery/jquery-3.2.1.min.js"></script>
-    <script src="/css/bs/bootstrap.min.js"></script>
+    <script src="js/jquery/jquery-3.2.1.min.js"></script>
+    <script src="css/bs/bootstrap.min.js"></script>
     <style>
         /* Remove the navbar's default margin-bottom and rounded borders */ 
         .navbar {
@@ -76,13 +76,20 @@
 
 <div class="background">
     <div class="container text-center">
-        <p> My name is Narayan Manivannan, and I am a Junior studying Computer Science at the University of Michigan College of Engineering.  I am currently taking courses such as Introduction to Operating Systems and Introduction to Computer Security, and I have taken past courses such as Data Structures and Algorithms, Introduction to Computer Organization, and Discrete Mathematics.  As I progress through such courses, I find myself enjoying Computer Science even more, so I am looking forward to continue learning as much as possible in my upcoming years. </p>
-
-        <p> This past summer, I researched for the University of Michigan Aerospace Engineering Department - coding functionalities for an autonomous drone, and I am currently on a design team “MiOT” that specializes in Internet of Things and Wearables.  I also have previous internship experience, and I have completed several side projects by myself and with others.  Through these experiences, I have developed my technical and collaborative skills that are necessary for any workplace. </p>     
-
-        <p> I have 2 main goals for the rest of my Sophomore year: <br>
-            1) Learn as much as possible in my classes, and apply my skills through class projects, personal projects, hackathons, etc. to master the content. <br>
-            2) Find a internship with a company in the technical industry that will allow me to further apply and master my skills, so I can positively contribute to the company. </p>
+        <p> I'm a Junior studying Computer Science, interested in how technology impacts health and education. <br>
+        I'm an incoming Software Engineering intern on Amazon Web Services's Artificial Intelligence Team (I hope). <br>
+        I like to play basketball/workout, play videogames, play music, read educational articles/papers, watch movies, and watch random youtube videos. (when I have time)</p>
+        <!-- I interned this past summer on Amazon's Intelligent Cloud Control Team, saving ~$13,000/yr by automating variance between daily forecasts for hardware capacity <br>
+        I was also a research assisant at University of Michigan's Aerospace Engineering Lab, implementing a new LeddarVu8 sensor for a flying quadrotor drone </p> -->
+        <p> Cool Projects I've done (currently working on = **):
+          <ul class="container text-center" style="list-style-position: inside; vertical-align: middle;">
+            <li> Optimizing agent training for CoinRun by using transfer learning, supervised learning, and PyTorch/Python** (Deep Learning) </li>
+            <li> Creating a mental health AI assistant using Dialogflow and Python** (Conversational Artificial Intelligence) </li>
+            <li> Implementing Instagram Clone using HTML, CSS**, Python, Flask, JS, React**, SQL (Web Systems) </li>
+            <li> Implemented File System, Virtual Pager, Thread Library using C++ (Operating Systems) </li>
+            <li> Implemented Zoo Keeper, Stock Market Exchange, Log Manager, and Maze Runner emulations using basic data structures/algorithms and C++ </li>
+          </ul>
+        </p>
     </div> 
 
 </div>
