--- a/index.html
+++ b/index.html
@@ -76,20 +76,7 @@
 
 <div class="background">
     <div class="container text-center">
-        <p> I'm a Junior studying Computer Science, interested in how technology impacts health and education. <br>
-        I'm an incoming Software Engineering intern on Amazon Web Services's Artificial Intelligence Team (I hope). <br>
-        I like to play basketball/workout, play videogames, play music, read educational articles/papers, watch movies, and watch random youtube videos. (when I have time)</p>
-        <!-- I interned this past summer on Amazon's Intelligent Cloud Control Team, saving ~$13,000/yr by automating variance between daily forecasts for hardware capacity <br>
-        I was also a research assisant at University of Michigan's Aerospace Engineering Lab, implementing a new LeddarVu8 sensor for a flying quadrotor drone </p> -->
-        <p> Cool Projects I've done (currently working on = **):
-          <ul class="container text-center" style="list-style-position: inside; vertical-align: middle;">
-            <li> Optimizing agent training for CoinRun by using transfer learning, supervised learning, and PyTorch/Python** (Deep Learning) </li>
-            <li> Creating a mental health AI assistant using Dialogflow and Python** (Conversational Artificial Intelligence) </li>
-            <li> Implementing Instagram Clone using HTML, CSS**, Python, Flask, JS, React**, SQL (Web Systems) </li>
-            <li> Implemented File System, Virtual Pager, Thread Library using C++ (Operating Systems) </li>
-            <li> Implemented Zoo Keeper, Stock Market Exchange, Log Manager, and Maze Runner emulations using basic data structures/algorithms and C++ </li>
-          </ul>
-        </p>
+        <p> I'm a Junior studying Computer Science at University of Michigan, Ann Arbor. This past summer I interned at Amazon's Intelligent Cloud Control Team, where I automated variance between forecasts for hardware capacity. I'm currently interested in how software and technology can impact health and education. This upcoming summer, I will be interning at Amazon Web Services. </p>
     </div> 
 
 </div>
