--- a/blog.html
+++ b/blog.html
@@ -15,10 +15,10 @@
     <link rel="stylesheet" href="css/home.css">
     <!-- Include Jquery and BS -->
     <!-- BS -->
-    <link rel="stylesheet" href="/css/bs/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bs/bootstrap.min.css">
     <!-- Jquery Scripts -->
-    <script src="/js/jquery/jquery-3.2.1.min.js"></script>
-    <script src="/css/bs/bootstrap.min.js"></script>
+    <script src="js/jquery/jquery-3.2.1.min.js"></script>
+    <script src="css/bs/bootstrap.min.js"></script>
     <style>
         /* Remove the navbar's default margin-bottom and rounded borders */ 
         .navbar {
