--- a/contact.html
+++ b/contact.html
@@ -13,13 +13,13 @@
     <!-- mobile -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- CSS -->
-    <link rel="stylesheet" href="/css/contact.css">
+    <link rel="stylesheet" href="css/contact.css">
     <!-- Include Jquery and BS -->
     <!-- BS -->
-    <link rel="stylesheet" href="/css/bs/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bs/bootstrap.min.css">
     <!-- Jquery Scripts -->
-    <script src="/js/jquery/jquery-3.2.1.min.js"></script>
-    <script src="/css/bs/bootstrap.min.js"></script>
+    <script src="js/jquery/jquery-3.2.1.min.js"></script>
+    <script src="css/bs/bootstrap.min.js"></script>
     <style>
         /* Remove the navbar's default margin-bottom and rounded borders */ 
         .navbar {
